--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,28 @@
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.1/libexec/wheel-0.45.1-py3-none-any.whl#sha256=da46333d5dcbde6e20cf7e2f8fff9e9ce76e8c94dc4afd6fb95fc4bc2745fb5e
+annotated-types==0.7.0
+anyio==4.8.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+distro==1.9.0
+Flask==3.1.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.8.2
+MarkupSafe==3.0.2
+openai==1.65.4
+packaging==24.2
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+requests==2.32.3
+sniffio==1.3.1
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
